# University

./: README.md
Semester-1/Algebra/project1/: main.cpp  output1.out  output2.out  output3.out  output4.out  output5.out
Semester-1/Algebra/project2/: main.cpp  output1.out  output2.out  output3.out  output4.out
Semester-1/Algebra/project3/: main.cpp  output1.out  output2.out  output3.out  output4.out  output5.out
Semester-1/Algebra/project4/: main.cpp  output1.out  output2.out  output3.out  output4.out  output5.out
Semester-1/Algebra/project5/: main.cpp  output1.out  output2.out  output3.out  output4.out  output5.out  output6.out  output7.out
Semester-1/Computational Logic/bases_operations_conversions/: consoleUI.py  conversions.py  main.py  number.py  operations.py  tests_conversions.py  tests_number.py  tests_operations.py
Semester-1/Computer Systems Architecture/lab2/: lab2_add_subs_2_10.asm  lab2_mult_1_10.asm  lab2_mult_28.asm  lab2_mult_2_10.asm  lab2_simple_exercises_10.asm
Semester-1/Computer Systems Architecture/lab3/: lab3_addition_signed_10.asm  lab3_addition_unsigned_10.asm  lab3_signed_10.asm  lab3_unsigned_10.asm
Semester-1/Computer Systems Architecture/lab4/: lab4_1.asm  (+1 more)
Semester-2/Data Structures and Algorithms/assignment4.1/: App.cpp  CMakeLists.txt  SMIterator.cpp  SMIterator.h  ShortTest.cpp  SortedMap.cpp  SortedMap.h
Semester-2/Data Structures and Algorithms/assignment5/: CMakeLists.txt  ExtendedTest.cpp  SMMIterator.cpp  SMMIterator.h  ShortTest.cpp  ShortTest.h  SortedMultiMap.cpp  SortedMultiMap.h
Semester-2/Dynamical Systems/: lab2.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb  lab6.ipynb  test-model1.ipynb
Semester-2/Object Oriented Programming/assignments/a23-913-Gabor-Ioana/: CMakeLists.txt  main.c
Semester-2/Object Oriented Programming/assignments/a23-913-Gabor-Ioana/domain/: product.c  product.h  vector.c  vector.h
Semester-2/Object Oriented Programming/assignments/a23-913-Gabor-Ioana/repository/: repository.c  repository.h  undo_redo_repository.c  undo_redo_repository.h
Semester-2/Object Oriented Programming/assignments/a23-913-Gabor-Ioana/service/: service.c  service.h
Semester-2/Object Oriented Programming/assignments/a23-913-Gabor-Ioana/tests/: test_domain.c  test_domain.h  test_repository.c  test_repository.h  test_service.c  test_service.h
Semester-2/Object Oriented Programming/assignments/a23-913-Gabor-Ioana/ui/: ui.c  ui.h
Semester-2/Object Oriented Programming/assignments/a23-913-Gabor-Ioana/utils/: utils.c  utils.h
Semester-2/Object Oriented Programming/assignments/a45-913-Gabor-Ioana/: CMakeLists.txt  main.cpp
Semester-2/Object Oriented Programming/assignments/a45-913-Gabor-Ioana/app_tests/: TestAll.cpp  TestController.cpp  TestController.h  TestDynamicVector.cpp  TestDynamicVector.h  TestEvent.cpp  TestEvent.h  TestRepository.cpp  TestRepository.h
Semester-2/Object Oriented Programming/assignments/a45-913-Gabor-Ioana/controller/: EventsController.cpp  EventsController.h
Semester-2/Object Oriented Programming/assignments/a45-913-Gabor-Ioana/domain/: AppExceptions.cpp  AppExceptions.h  DynamicVector.cpp  DynamicVector.h  Event.cpp  Event.h
Semester-2/Object Oriented Programming/assignments/a45-913-Gabor-Ioana/repository/: Repository.cpp  Repository.h
Semester-2/Object Oriented Programming/assignments/a45-913-Gabor-Ioana/ui/: ConsoleUI.cpp  ConsoleUI.h
Semester-2/Object Oriented Programming/assignments/a45-913-Gabor-Ioana/validators/: Validators.cpp
Semester-2/Object Oriented Programming/assignments/a6-913-Gabor-Ioana-1/: CMakeLists.txt  main.cpp
Semester-2/Object Oriented Programming/assignments/a6-913-Gabor-Ioana-1/app_tests/: TestAll.cpp  TestController.cpp  TestEvent.cpp  TestRepository.cpp
Semester-2/Object Oriented Programming/assignments/a6-913-Gabor-Ioana-1/controller/: EventsController.cpp  EventsController.h
Semester-2/Object Oriented Programming/assignments/a6-913-Gabor-Ioana-1/domain/: Event.cpp  Event.h
Semester-2/Object Oriented Programming/assignments/a6-913-Gabor-Ioana-1/repository/: Repository.h
Semester-2/Object Oriented Programming/assignments/a6-913-Gabor-Ioana-1/ui/: ConsoleUI.cpp  ConsoleUI.h
Semester-2/Object Oriented Programming/assignments/a6-913-Gabor-Ioana-1/validators/: Validators.h
Semester-2/Object Oriented Programming/exam/e913-913-Gabor-Ioana/: AbstractObserver.cpp  AbstractObserver.h  AbstractSubject.cpp  AbstractSubject.h  CMakeLists.txt  Controller.cpp  Controller.h  Doctor.cpp  Doctor.h  DoctorRepository.cpp  DoctorRepository.h  DoctorWindow.cpp  DoctorWindow.h  DoctorWindow.ui  GenericException.cpp  GenericException.h  Patient.cpp  Patient.h  PatientRepository.cpp  PatientRepository.h  Statistics.cpp  Statistics.h  Statistics.ui  doctors.txt  main.cpp  patients.txt
Semester-2/Object Oriented Programming/tests/t1-913-Gabor-Ioana-1/: CMakeLists.txt  main.cpp
Semester-2/Object Oriented Programming/tests/t1-913-Gabor-Ioana-1/controller/: PatientsController.cpp  PatientsController.h
Semester-2/Object Oriented Programming/tests/t1-913-Gabor-Ioana-1/domain/: Patient.cpp  Patient.h
Semester-2/Object Oriented Programming/tests/t1-913-Gabor-Ioana-1/exceptions/: GenericAppException.cpp  GenericAppException.h
Semester-2/Object Oriented Programming/tests/t1-913-Gabor-Ioana-1/repository/: Repository.cpp  Repository.h
Semester-2/Object Oriented Programming/tests/t1-913-Gabor-Ioana-1/ui/: ConsoleUI.cpp  ConsoleUI.h
Semester-2/Object Oriented Programming/tests/t2-913-Gabor-Ioana-1/: CMakeLists.txt  ConsoleUI.cpp  ConsoleUI.h  Device.cpp  Device.h  HumiditySensor.cpp  HumiditySensor.h  Sensor.cpp  Sensor.h  SmokeSensor.cpp  SmokeSensor.h  TemperatureSensor.cpp  TemperatureSensor.h  abc.txt  cheap.txt  main.cpp  saved.txt
Semester-2/Object Oriented Programming/tests/t3-913-Gabor-Ioana/: CMakeLists.txt  Controller.cpp  Controller.h  Equation.cpp  Equation.h  GUI.cpp  GUI.h  Repository.cpp  Repository.h  equations.txt  main.cpp
(+280 files in other folders)
